test/continuations/neg/t2949.check
t2949.scala:13: error: type mismatch;
 found   : Int
 required: ? @scala.util.continuations.cpsParam[List[?],Any]
    x * y
      ^
one error found
